# vpin-manager

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/vpin-manager-cli/: Cargo.toml
crates/vpin-manager-cli/src/: main.rs
crates/vpin-manager-core/: Cargo.toml
crates/vpin-manager-core/src/: b2s.rs  config.rs  lib.rs  vpx.rs
crates/vpin-manager-core/src/files/: extractor.rs  mod.rs  organizer.rs
crates/vpin-manager-core/src/vpsdb/: fetch.rs  mod.rs  models.rs  search.rs
crates/vpin-manager-core/tests/: parse_vpsdb.rs
crates/vpin-manager-web/: Cargo.toml
crates/vpin-manager-web/src/: main.rs
