[package]
name = "vpin-manager-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
